--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.3.0",
     "lint-staged": "^13.0.3",
     "parcel": "^2.7.0",
     "postcss": "^8.4.18",
@@ -95,6 +96,6 @@
   "scripts": {
     "build": "rollup -c --configPlugin typescript",
     "start": "parcel demo/index.html --dist-dir demo/dist",
-    "test": "jest"
+    "test": "jest --watch"
   }
 }
