--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asup/tree-of-nodes",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "REACT Typescript Treeview component",
   "author": "Paul Thomas <@PaulDThomas>",
   "private": false,
@@ -36,6 +36,7 @@
     "@parcel/transformer-webmanifest": "^2.7.0",
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^9.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -50,7 +51,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "jest": "^29.2.2",
-    "jest-environment-jsdom": "^29.3.0",
+    "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.0.3",
     "parcel": "^2.7.0",
     "postcss": "^8.4.18",
@@ -61,10 +62,8 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.34.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "tslib": "^2.4.1",
     "typescript": "^4.9.3"
   },
   "lint-staged": {
