--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,7 @@
     "declaration": true,
     "declarationDir": "types",
     "jsx": "react-jsx",
-    "noImplicitAny": true,
-    "sourceMap": true
+    "noImplicitAny": true
   },
   "include": ["src"],
   "exclude": ["node_modules"]
