--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "declaration": true,
-    "declarationDir": "types",
+    // "declarationDir": "types",
     "jsx": "react-jsx",
     "noImplicitAny": true
   },
