--- a/demo/public/manifest.json
+++ b/demo/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Simple table demo",
-  "name": "Simple table demo for ASUP Ltd",
+  "short_name": "Tree of nodes demo",
+  "name": "Tree of nodes demo for ASUP Ltd",
   "icons": [
     {
       "src": "favicon.ico",
