--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asup/tree-of-nodes",
-  "version": "1.0.8",
+  "version": "2.0.0",
   "description": "REACT Typescript Treeview component",
   "author": "Paul Thomas <@PaulDThomas>",
   "private": false,
@@ -57,6 +57,7 @@
     "husky": "^8.0.1",
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.3.1",
+    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "^13.0.3",
     "parcel": "^2.7.0",
     "postcss": "^8.4.18",
