--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,18 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true,
     "declaration": true,
-    // "declarationDir": "types",
     "jsx": "react-jsx",
-    "noImplicitAny": true
+    "plugins": [
+      {
+        "name": "typescript-plugin-css-modules",
+        "options": {
+          "classnameTransform": "asIs"
+        }
+      }
+    ]
   },
-  "include": ["src", "demo"],
-  "exclude": ["node_modules"]
+  "include": ["global.d.ts", "src", "demo", "setupTests.ts"],
+  "exclude": ["node_modules", "dist"]
 }
