--- a/package.json
+++ b/package.json
@@ -34,34 +34,39 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.3.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.29.0",
     "@parcel/packager-raw-url": "^2.7.0",
     "@parcel/packager-ts": "^2.8.3",
     "@parcel/transformer-sass": "^2.7.0",
     "@parcel/transformer-typescript-types": "^2.8.0",
     "@parcel/transformer-webmanifest": "^2.7.0",
     "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.2",
     "@types/node": "^20.9.5",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
-    "@types/rollup-plugin-peer-deps-external": "^2.2.1",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
+    "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-jest": "^28.13.5",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.31.10",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "husky": "^9.1.7",
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.3.1",
     "jest-watch-typeahead": "^2.2.2",
-    "lint-staged": "^15.1.0",
+    "lint-staged": "^16.1.0",
     "parcel": "^2.7.0",
     "postcss": "^8.4.18",
     "prettier": "^3.1.0",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "process": "^0.11.10",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
